# FinSight_AI

./: .env.example  .gitignore  CLAUDE.md  DEV.md  DOCUMENTATION.md  LICENSE  PLAN.md  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/agent/: __init__.py  _warn.py  cli.py  goals.py  graph.py  llm.py  memory.py  prompts.py  runner.py  scope.py  state.py  user_profile.py
backend/alembic/: env.py
backend/app/: account_serializers.py  auth.py  category_rules.py  chat_history.py  config.py  demo_provision.py  demo_seed.py  dependencies.py  logging_config.py  main.py  schemas.py  scoping.py  user_data.py
backend/db/: base.py  migrate.py  models.py
backend/ingest/: __init__.py  bank_csv.py  interac.py
backend/insights/: __init__.py  anomalies.py  credit_optimizer.py  reconciliation.py  recurring.py  runway.py  service.py  tfsa.py
backend/integrations/: plaid_background.py  plaid_client.py  plaid_sync.py  token_crypto.py
backend/mcp/: __init__.py  boc_rates.py  currency.py  market.py  registry.py
backend/notifications/: __init__.py  alerts.py  digest.py  email.py
backend/rag/: embedder.py  indexing.py  retriever.py
backend/scripts/: canadian_demo.py  check_e2e.py  demo_transactions.py  migrate_to_supabase.py  seed.py
backend/tests/: conftest.py  test_agent.py  test_agent_intelligence.py  test_aggregator.py  test_bootstrap.py  test_budgets.py  test_capabilities.py  test_category_rules.py  test_chat.py  test_chat_history.py  test_demo_provision.py  test_e2e.py  test_embeddings.py  test_goals.py  (+13 more)
(+119 files in other folders)
