[project]
name = "backend"
version = "0.1.0"
description = "FinSight AI backend — FastAPI + LangGraph finance agent"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "anthropic>=0.40.0",
    "eval-type-backport>=0.4.0",
    "fastapi>=0.128.8",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.39.0",
    "voyageai>=0.2.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP045"]  # str | None syntax requires Python 3.10+

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
